[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
metrics = "0.20.0"
metrics-exporter-prometheus = "0.11.0"
once_cell = "1.13.0"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tokio = { version = "^1.18", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.3", features = ["trace"] }
tracing = "^0.1"
tracing-opentelemetry = "^0.17"
tracing-chrome = "0.6.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tracing-tree = "0.2.0"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
url = "^2.2"

[profile.dev]
opt-level = 1

[profile.release]
debuginfo = 1
lto = "thin"
